# django-graphql

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
src/: entrypoint.sh
src/account/: models.py
src/account/graph/: mutations.py  queries.py  repositories.py  services.py  types.py
src/account/migrations/: 0001_initial.py
src/core/: middlewares.py  schema.py  settings.py  urls.py
src/utils/: constants.py  exceptions.py  formatter.py  models.py  paginations.py  responses.py
