[tool.poetry]
name = "django-with-strawberry-graphql"
version = "0.1.0"
description = "Django with strawberry graphql"
authors = ["Carol Chen <awdrg1210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
uvicorn = "^0.31.0"
strawberry-graphql-django = "^0.48.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  "**/migrations/*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
